# ci-cd-pipeline

./: .gitignore  Cargo.toml  QUICKSTART.md  README.md  WORKFLOW_DETAILS.md
.github/workflows/: cd.yml  ci.yml
src/: main.rs
